deploy/k8s-botarena-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neuroarena-botarena-service
  namespace: neuroarena-prod
  labels:
    app: neuroarena-server
    tier: botarena-relay
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "2567"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  ports:
    - name: websocket-botarena
      port: 2567
      targetPort: 2567
      protocol: TCP
  selector:
    app: neuroarena-server
    tier: multiplayer-relay
